# slaite-api-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: github-ci.yml
app/: main.py
app/config/: database.py
app/dto/: activityObjects.py  eventObjects.py  notificationObjects.py  scheduleObjects.py  taskObjects.py  userObjects.py
app/middleware/: authentication.py
app/models/: activityModel.py  eventModel.py  notificationModel.py  scheduleModel.py  taskModel.py  userModel.py
app/routes/: activityRoutes.py  authRoutes.py  eventRoutes.py  notificationRoutes.py  scheduleRoutes.py  taskRoutes.py  userRoutes.py
