[tool.poetry]
name = "slaite-api-service-new"
version = "0.1.0"
description = ""
authors = ["Joy Ivan <ivanoskytan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
watchgod = "^0.8.2"
sqlalchemy = "^2.0.30"
openai = "^1.30.5"
pydantic = "^2.7.2"
jwt = "^1.3.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
